--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+
     tools:context=".View.fragments.HomeFragment">
 
 
@@ -115,8 +115,8 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:alpha="0.3"
+                    android:layout_height="150dp"
+                    android:alpha="0.15"
                     android:scaleType="centerCrop"
                     android:src="@drawable/krishna1" />
             </com.google.android.material.card.MaterialCardView>
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
 
                 android:padding="@dimen/_5sdp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -176,7 +176,7 @@
                 tools:listitem="@layout/chapter_list_items"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
         </LinearLayout>
 
