--- a/app/src/main/res/layout/chapter_list_items.xml
+++ b/app/src/main/res/layout/chapter_list_items.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/change_background"
+        android:clickable="true"
+
         android:padding="@dimen/_5sdp">
 
         <!--        <ImageView-->
