show all verses related to chapter in fragment_verses.xml After click any chapter of fragment_home.xml

--- a/app/src/main/res/drawable/background_btn.xml
+++ b/app/src/main/res/drawable/background_btn.xml
@@ -7,7 +7,7 @@
         />
     <gradient
         android:centerColor="#F6835E"
-        android:endColor="@color/appColor"
-        android:startColor="@color/appColor" />
+        android:endColor="@color/appColor1"
+        android:startColor="@color/appColor1" />
 
 </shape>
