--- a/app/src/main/res/drawable/back_stroke.xml
+++ b/app/src/main/res/drawable/back_stroke.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/appColor" />
+        android:color="#0FFF8300" />
     <corners android:radius="@dimen/_5sdp" />
 </shape>
