--- a/app/src/main/res/layout/fragment_verses.xml
+++ b/app/src/main/res/layout/fragment_verses.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="300dp"
-            android:alpha="0.3"
+            android:alpha="0.1"
             android:src="@drawable/krsna"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/linearLayout4"
@@ -99,6 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/baloo_bhai_2_extrabold"
+                        android:textStyle="bold"
                         android:text="Arjun Visada Yoga"
                         android:textColor="@color/appColor"
                         android:textSize="17sp" />
@@ -108,12 +109,10 @@
 
             <TextView
                 android:id="@+id/tvChapterDes"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="4dp"
                 android:fontFamily="@font/alegreya_sans_medium"
                 android:maxLines="5"
-                android:minHeight="100dp"
                 android:padding="3dp"
                 android:text="The first chapter of the Bhagavad Gita - Arjuna Vishada Yoga introduces the setup, the setting, the characters and the circumstances that led to the epic battle of Mahabharata, fought between the Pandavas and the Kauravas. It outlines the reasons that led to the revelation of the of Bhagavad Gita. As both armies stand ready for the battle, the mighty warrior Arjuna, on observing the warriors on both sides becomes increasingly sad and depressed due to the fear of losing his relatives and friends and the consequent sins attributed to killing his own relatives. So, he surrenders to Lord Krishna, seeking a solution. Thus, follows the wisdom of the Bhagavad Gita."
                 android:textColor="@color/black"
@@ -121,14 +120,14 @@
                  />
 
             <TextView
+                android:id="@+id/readMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/baloo_bhai_2_medium"
                 android:paddingStart="@dimen/_3ssp"
                 android:paddingBottom="3dp"
                 android:text="Read More..."
-                android:textColor="#536DFE"
-                tools:ignore="RtlSymmetry" />
+                android:textColor="#536DFE" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
