check network connection in fragment_verses.xml

--- a/app/src/main/res/layout/chapter_list_items.xml
+++ b/app/src/main/res/layout/chapter_list_items.xml
@@ -28,7 +28,7 @@
 
 
         <LinearLayout
-            android:id="@+id/linearLayout4"
+            android:id="@+id/topLinear"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
