--- a/app/src/main/res/drawable/selected_orange.xml
+++ b/app/src/main/res/drawable/selected_orange.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/appColor" />
+        android:color="#16FF8300" />
     <solid android:color="#46E3C29F"/>
-    <corners android:radius="@dimen/_5sdp" />
+    <corners android:radius="10dp" />
 </shape>
