--- a/app/src/main/res/layout/fragment_verses_details.xml
+++ b/app/src/main/res/layout/fragment_verses_details.xml
@@ -11,6 +11,7 @@
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,13 +29,13 @@
                 android:layout_marginTop="@dimen/_50sdp"
                 android:alpha="0.1"
                 android:src="@drawable/krsna"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout4"
-                app:layout_constraintTop_toTopOf="@+id/linearLayout4" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
-
-                android:id="@+id/linearLayout4"
+                android:id="@+id/topLL"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -46,7 +47,6 @@
                     android:id="@+id/topBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
@@ -80,88 +80,96 @@
                 </LinearLayout>
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
-
+                    android:id="@+id/progressBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
-                    android:indeterminateTint="@color/appColor"
+                    android:indeterminateTint="#8F574D4A"
                     android:visibility="visible"
-                    app:indicatorColor="@color/appColor"
+                    app:indicatorColor="@color/appColor1"
                     app:layout_anchor="@id/topBar"
                     app:layout_anchorGravity="bottom"
                     app:trackColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/tvVersesNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/baloo_bhai_2_bold"
-                    android:gravity="center"
-                    android:padding="@dimen/_5sdp"
-                    android:text="|| 1.4 ||"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14sdp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvVerseTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/baloo_bhai_2_bold"
-                    android:gravity="center"
-                    android:padding="@dimen/_6sdp"
-                    android:text="धृतराष्ट्र उवाच धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः। मामकाः पाण्डवाश्चैव किमकुर्वत सञ्जय।।"
-                    android:textColor="@color/appColor"
-                    android:textSize="@dimen/_15ssp"
-                    android:textStyle="bold" />
-
-
-                <TextView
-                    android:id="@+id/tvTranslateEg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/commissioner_light"
-                    android:gravity="center"
-                    android:padding="@dimen/_6sdp"
-                    android:text="sañjaya uvācha dṛiṣhṭvā tu pāṇḍavānīkaṁ vyūḍhaṁ duryodhanastadā āchāryamupasaṅgamya rājā vachanamabravīt"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11ssp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvVerseWords"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/commissioner_light"
-                    android:gravity="center"
-                    android:padding="@dimen/_6sdp"
-                    android:text="sanjayaḥ uvācha—Sanjay said; dṛiṣhṭvā—on observing; tu—but; pāṇḍava-anīkam—the Pandava army; vyūḍham—standing in a military formation; duryodhanaḥ—King Duryodhan; tadā—then; āchāryam—teacher; upasaṅgamya—approached; rājā—the king; vachanam—words; abravīt—spoke "
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_11sdp"
-                    android:textStyle="bold" />
-
-                <ImageView
+                <LinearLayout
+                    android:id="@+id/topBottomLL"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:src="@drawable/verse_view" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+
+                    <TextView
+                        android:id="@+id/tvVersesNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/baloo_bhai_2_bold"
+                        android:gravity="center"
+                        android:padding="@dimen/_5sdp"
+                        android:text="|| 1.4 ||"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14sdp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvVerseTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/baloo_bhai_2_bold"
+                        android:gravity="center"
+                        android:padding="@dimen/_6sdp"
+                        android:text="धृतराष्ट्र उवाच धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः। मामकाः पाण्डवाश्चैव किमकुर्वत सञ्जय।।"
+                        android:textColor="@color/appColor"
+                        android:textSize="@dimen/_15ssp" />
+
+
+                    <TextView
+                        android:id="@+id/tvTranslateEg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/commissioner_light"
+                        android:gravity="center"
+                        android:padding="@dimen/_6sdp"
+                        android:text="sañjaya uvācha dṛiṣhṭvā tu pāṇḍavānīkaṁ vyūḍhaṁ duryodhanastadā āchāryamupasaṅgamya rājā vachanamabravīt"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_11ssp" />
+
+                    <TextView
+                        android:id="@+id/tvVerseWords"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/commissioner_medium"
+                        android:gravity="center"
+                        android:padding="@dimen/_6sdp"
+                        android:text="sanjayaḥ uvācha—Sanjay said; dṛiṣhṭvā—on observing; tu—but; pāṇḍava-anīkam—the Pandava army; vyūḍham—standing in a military formation; duryodhanaḥ—King Duryodhan; tadā—then; āchāryam—teacher; upasaṅgamya—approached; rājā—the king; vachanam—words; abravīt—spoke "
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_11sdp"
+                        tools:ignore="TextSizeCheck" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:src="@drawable/verse_view" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
 
-                android:id="@+id/linearLayout8"
+                android:id="@+id/midLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+                app:layout_constraintTop_toBottomOf="@+id/topLL">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -170,7 +178,7 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/baloo_bhai_2_medium"
                     android:text="Translations"
-                    android:textColor="@color/black"
+                    android:textColor="@color/appColor"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -211,7 +219,7 @@
                                     android:id="@+id/linearLayout9"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
+
                                     android:layout_marginStart="5dp"
                                     android:layout_marginEnd="5dp"
                                     android:orientation="horizontal"
@@ -226,6 +234,7 @@
                                         android:gravity="center"
                                         android:padding="@dimen/_6sdp"
                                         android:text="Author : "
+
                                         android:textColor="@color/black"
                                         android:textSize="@dimen/_11sdp"
                                         android:textStyle="bold" />
@@ -255,10 +264,9 @@
                                     android:layout_marginBottom="@dimen/_20sdp"
                                     android:fontFamily="@font/commissioner_light"
                                     android:padding="4dp"
-                                    android:text="यहाँ (पाण्डवों की सेना में) बड़े-बड़े शूरवीर हैं, जिनके बहुत बड़े-बड़े धनुष हैं तथा जो युद्ध में भीम और अर्जुनके समान हैं। उनमें युयुधान (सात्यकि), राजा विराट और महारथी द्रुपद भी हैं। धृष्टकेतु और चेकितान तथा पराक्रमी काशिराज भी हैं। पुरुजित् और कुन्तिभोज--ये दोनों भाई तथा मनुष्योंमें श्रेष्ठ शैब्य भी हैं। पराक्रमी युधामन्यु और पराक्रमी उत्तमौजा भी हैं। सुभद्रापुत्र अभिमन्यु और द्रौपदी के पाँचों पुत्र भी हैं। ये सब-के-सब महारथी हैं। "
+                                    android:text="@string/verseDes"
                                     android:textColor="@color/black"
-                                    android:textSize="@dimen/_11sdp"
-                                    android:textStyle="bold" />
+                                    android:textSize="@dimen/_11sdp" />
 
                             </LinearLayout>
                         </com.google.android.material.card.MaterialCardView>
@@ -301,11 +309,12 @@
 
 
             <LinearLayout
-
+                android:id="@+id/bottomLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/midLL">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -314,7 +323,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:fontFamily="@font/baloo_bhai_2_medium"
                     android:text="Commentary"
-                    android:textColor="@color/black"
+                    android:textColor="@color/appColor"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -324,7 +333,6 @@
 
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-
                         android:id="@+id/constraintLayout4"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -341,7 +349,7 @@
                             android:layout_marginEnd="10dp"
                             android:padding="@dimen/_5sdp"
                             app:cardBackgroundColor="@color/white"
-                            app:cardCornerRadius="@dimen/_10ssp"
+                            app:cardCornerRadius="10dp"
                             app:cardUseCompatPadding="true"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -357,7 +365,7 @@
 
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
+
                                     android:layout_marginStart="5dp"
                                     android:layout_marginEnd="5dp"
                                     android:orientation="horizontal"
@@ -379,6 +387,7 @@
 
                                     <TextView
 
+                                        android:id="@+id/commentaryAuthor"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
@@ -388,23 +397,25 @@
                                         android:text="Swami shivanand "
                                         android:textColor="@color/black"
                                         android:textSize="@dimen/_11sdp"
-                                        android:textStyle="bold" />
+                                        android:textStyle="bold"
+                                        tools:ignore="TextSizeCheck" />
 
 
                                 </LinearLayout>
 
                                 <TextView
 
-                                    android:layout_width="wrap_content"
+                                    android:id="@+id/commentaryDesc"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="5dp"
                                     android:fontFamily="@font/commissioner_light"
                                     android:gravity="center_vertical"
+                                    android:minLines="5"
                                     android:padding="4dp"
                                     android:text="यहाँ (पाण्डवों की सेना में) बड़े-बड़े शूरवीर हैं, जिनके बहुत बड़े-बड़े धनुष हैं तथा जो युद्ध में भीम और अर्जुनके समान हैं। उनमें युयुधान (सात्यकि), राजा विराट और महारथी द्रुपद भी हैं। धृष्टकेतु और चेकितान तथा पराक्रमी काशिराज भी हैं। पुरुजित् और कुन्तिभोज--ये दोनों भाई तथा मनुष्योंमें श्रेष्ठ शैब्य भी हैं। पराक्रमी युधामन्यु और पराक्रमी उत्तमौजा भी हैं। सुभद्रापुत्र अभिमन्यु और द्रौपदी के पाँचों पुत्र भी हैं। ये सब-के-सब महारथी हैं। "
                                     android:textColor="@color/black"
-                                    android:textSize="@dimen/_11sdp"
-                                    android:textStyle="bold" />
+                                    android:textSize="@dimen/_11sdp" />
 
                                 <TextView
                                     android:id="@+id/readMore"
@@ -422,7 +433,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <ImageView
-                        android:id="@+id/leftBtn1"
+                        android:id="@+id/leftBtn2"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="50dp"
@@ -460,9 +471,11 @@
 
                 android:id="@+id/noInternet"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="300dp"
 
                 android:layout_gravity="center"
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="100dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:visibility="gone"
@@ -481,8 +494,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/topLinear" />
 
                 <TextView
-
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_20sdp"
