--- a/app/src/main/res/layout/verses_list_items.xml
+++ b/app/src/main/res/layout/verses_list_items.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp"
-    app:cardElevation="@dimen/_5sdp"
+    app:cardElevation="5dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/versesItemClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_2sdp"
+        android:padding="@dimen/_5sdp"
         android:background="@drawable/change_background"
         android:clickable="true">
 
