--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -10,7 +10,10 @@
         <item>@font/baloo_bhai_2_extrabold</item>
         <item>@font/baloo_bhai_2_medium</item>
         <item>@font/big_shoulders_display_black</item>
+        <item>@font/commissioner</item>
+        <item>@font/commissioner_black</item>
         <item>@font/commissioner_light</item>
+        <item>@font/commissioner_medium</item>
         <item>@font/faster_one</item>
         <item>@font/syncopate_bold</item>
     </array>
