--- a/app/src/main/res/layout/verses_list_items.xml
+++ b/app/src/main/res/layout/verses_list_items.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
+    app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +30,7 @@
             <ImageButton
                 android:id="@+id/listBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:background="@android:color/transparent"
                 android:padding="5dp"
@@ -53,11 +53,13 @@
 
             <ImageButton
 
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:background="@android:color/transparent"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+
+                android:background="@drawable/circle"
+
                 android:padding="5dp"
+                app:tint="@color/white"
                 android:src="@drawable/baseline_keyboard_double_arrow_right_24" />
 
 
