--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_homeFragment_to_versesFragment"
             app:destination="@id/versesFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_saveFragment"
+            app:destination="@id/saveFragment" />
     </fragment>
     <fragment
         android:id="@+id/versesFragment"
@@ -37,4 +40,34 @@
         android:name="com.example.shreebhagavadgita.View.fragments.VersesDetailsFragment"
         android:label="fragment_verses_details"
         tools:layout="@layout/fragment_verses_details" />
+    <fragment
+        android:id="@+id/saveFragment"
+        android:name="com.example.shreebhagavadgita.View.fragments.SaveFragment"
+        android:label="fragment_save"
+        tools:layout="@layout/fragment_save" >
+        <action
+            android:id="@+id/action_saveFragment_to_saveVersesFragment"
+            app:destination="@id/saveVersesFragment" />
+        <action
+            android:id="@+id/action_saveFragment_to_saveChaptersFragment"
+            app:destination="@id/saveChaptersFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/saveChaptersFragment"
+        android:name="com.example.shreebhagavadgita.View.fragments.SaveChaptersFragment"
+        android:label="fragment_save_chapters"
+        tools:layout="@layout/fragment_save_chapters" >
+        <action
+            android:id="@+id/action_saveChaptersFragment_to_versesFragment"
+            app:destination="@id/versesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/saveVersesFragment"
+        android:name="com.example.shreebhagavadgita.View.fragments.SaveVersesFragment"
+        android:label="fragment_save_verses"
+        tools:layout="@layout/fragment_save_verses" >
+        <action
+            android:id="@+id/action_saveVersesFragment_to_versesDetailsFragment"
+            app:destination="@id/versesDetailsFragment" />
+    </fragment>
 </navigation>
