--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -21,10 +25,21 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_versesFragment"
-            app:destination="@id/versesFragment" />
+            app:destination="@id/versesFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
         <action
             android:id="@+id/action_homeFragment_to_saveFragment"
-            app:destination="@id/saveFragment" />
+            app:destination="@id/saveFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_homeFragment_pop_including_splashFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/versesFragment"
@@ -33,7 +48,11 @@
         tools:layout="@layout/fragment_verses" >
         <action
             android:id="@+id/action_versesFragment_to_versesDetailsFragment"
-            app:destination="@id/versesDetailsFragment" />
+            app:destination="@id/versesDetailsFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/versesDetailsFragment"
@@ -47,10 +66,18 @@
         tools:layout="@layout/fragment_save" >
         <action
             android:id="@+id/action_saveFragment_to_saveVersesFragment"
-            app:destination="@id/saveVersesFragment" />
+            app:destination="@id/saveVersesFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
         <action
             android:id="@+id/action_saveFragment_to_saveChaptersFragment"
-            app:destination="@id/saveChaptersFragment" />
+            app:destination="@id/saveChaptersFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/saveChaptersFragment"
@@ -59,7 +86,11 @@
         tools:layout="@layout/fragment_save_chapters" >
         <action
             android:id="@+id/action_saveChaptersFragment_to_versesFragment"
-            app:destination="@id/versesFragment" />
+            app:destination="@id/versesFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/saveVersesFragment"
@@ -68,6 +99,10 @@
         tools:layout="@layout/fragment_save_verses" >
         <action
             android:id="@+id/action_saveVersesFragment_to_versesDetailsFragment"
-            app:destination="@id/versesDetailsFragment" />
+            app:destination="@id/versesDetailsFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
 </navigation>
